--- a/openCVAndroidSDK/build.gradle
+++ b/openCVAndroidSDK/build.gradle
@@ -1,9 +1,9 @@
 apply plugin: 'com.android.library'
 
 ext {
-    PUBLISH_GROUP_ID = 'org.openftc'
-    PUBLISH_ARTIFACT_ID = 'opencv-repackaged'
-    PUBLISH_VERSION = '4.1.0-A'
+    PUBLISH_GROUP_ID = 'org.ope'
+    PUBLISH_ARTIFACT_ID = 'opencv-repackagedj'
+    PUBLISH_VERSION = '4.1.2-A'
 }
 
 android {
